refactor: naming convention and logic flow

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       <div id="start">Quiz Start!</div>
       <div id="quiz" style="display: none">
         <div id="question"></div>
-        <div id="qImg"></div>
+        <div id="question-image"></div>
         <div id="choices">
-          <div class="choice" id="A" onclick="checkAnswer('A')"></div>
-          <div class="choice" id="B" onclick="checkAnswer('B')"></div>
-          <div class="choice" id="C" onclick="checkAnswer('C')"></div>
+          <div class="choice" id="choice-a" onclick="checkAnswer('A')"></div>
+          <div class="choice" id="choice-b" onclick="checkAnswer('B')"></div>
+          <div class="choice" id="choice-c" onclick="checkAnswer('C')"></div>
         </div>
         <div id="timer">
           <div id="counter"></div>
-          <div id="btimeGauge"></div>
-          <div id="timeGauge"></div>
+          <div id="bg-time-gauge"></div>
+          <div id="time-gauge"></div>
         </div>
         <div id="progress"></div>
       </div>
-      <div id="scoreContainer" style="display: none"></div>
+      <div id="score-container" style="display: none"></div>
     </div>
 
     <!-- Javascript Files -->
